# internal-representation-control

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: aggregate.html  forest.html  index.html  layers.html
docs/data/: index.json
docs/data/agg/: sentences.json
irc/: concept_vectors.py  conditions.py  constants.py  env.py  model.py  neuronpedia.py  nla_judge_prompt.py  paths.py  pipeline.py  util.py  words.py  words_paper.py
nla_server/: .gitignore  README.md  launch.sh  pyproject.toml  setup.sh
notes/: latents_v2.md  nla_setup.md  run1-core_results.md  smoke_tests.md
scripts/: export_agg_data.py  export_viz_data.py  nla_explain.py  nla_judge.py  plot_results.py  render_viewer_figure.py  run_pipeline.py  smoke_a_generate.py  smoke_b_sae.py  smoke_c_concept_vector.py  smoke_d_latent_selection.py
viz/: repr_viewer.html
