[project]
name = "nla-server"
version = "0.1.0"
description = "SGLang serving environment for the NLA activation-verbalizer (kitft/nla-gemma3-27b-L41-av). Separate from the root project: sglang requires Python 3.12 (root is 3.14). See README.md."
requires-python = ">=3.12,<3.13"
dependencies = [
    "sglang==0.5.8.post1",
    # flashinfer JIT-compiles attention kernels for sm_120 (Blackwell) at
    # first launch; it shells out to ninja + nvcc (nvcc from /usr/local/cuda).
    "ninja>=1.11",
]

[tool.uv]
package = false
